# pandoc-mermaid

./: CHANGELOG.md  flake.nix  mermaid-filter.cabal  pandoc-mermaid.cabal
app/: Main.hs
