cabal-version:      3.0
name:               mermaid-filter
version:            0.1.0.0
synopsis:           A Pandoc filter for embedding mermaid figures.
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ben Gamari
maintainer:         ben@smart-cactus.org
copyright:          (c) 2024 Ben Gamari
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable mermaid-filter
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.16 && <4.20,
                      text,
                      transformers,
                      process,
                      pandoc-types >1.23 && <1.24
    hs-source-dirs:   app
    default-language: Haskell2010
